fix: add RBAC, server-side price verification, order ownership check
- Add role field to UserEntity (CUSTOMER/ADMIN)
- AppUserDetailsService now maps role to Spring Security authority
- UserServiceImpl sets default role CUSTOMER on registration
- SecurityConfig restricts admin endpoints to ROLE_ADMIN
- OrderServiceImpl computes total from DB prices (SEC-003)
- OrderServiceImpl removeOrder checks ownership (SEC-004)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>