@@ -3,13 +3,14 @@ package com.biterush.foodiesapi.service;
 import com.biterush.foodiesapi.entity.UserEntity;
 import com.biterush.foodiesapi.repository.UserRepository;
 import lombok.AllArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 @AllArgsConstructor
@@ -17,11 +18,12 @@ public class AppUserDetailsService implements UserDetailsService {
 
     private final UserRepository userRepository;
 
-
     @Override
     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
         UserEntity user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new UsernameNotFoundException("User not found"));
-        return new User(user.getEmail(), user.getPassword(), Collections.emptyList());
+        String role = (user.getRole() != null) ? user.getRole() : "CUSTOMER";
+        return new User(user.getEmail(), user.getPassword(),
+                List.of(new SimpleGrantedAuthority("ROLE_" + role)));
     }
 }
